--- a/docs/styles.css
+++ b/docs/styles.css
@@ -2,13 +2,14 @@ h1 {
   font-size: 100px;
   margin: auto;
   font-family: impact;
-  color: darkgoldenrod;
+  color: white;
+  width: 75%;
 }
 
 h1.hover {
-  color: white;
+  color: lightyellow;
 }
 
 body {
-  background-image: url(https://plus.unsplash.com/premium_photo-1672201106204-58e9af7a2888?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8cmFpbmJvdyUyMGdyYWRpZW50fGVufDB8fDB8fHww);
+  background-image: url(https://images.unsplash.com/photo-1669780080326-c5b82a6476fe?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cmFpbmJvdyUyMGdyYWRpZW50fGVufDB8fDB8fHww);
 }
