--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,12 +1,14 @@
 h1 {
   font-size: 100px;
-  margin: auto;
+  margin-top: 50%;
+  margin-bottom: 50%;
+  text-align: center;
   font-family: impact;
   color: white;
   width: 75%;
 }
 
-h1.hover {
+h1:hover {
   color: lightyellow;
 }
 
