--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,17 +1,126 @@
 h1 {
-  font-size: 100px;
-  margin-top: 50%;
-  margin-bottom: 50%;
   text-align: center;
-  font-family: impact;
-  color: white;
-  width: 75%;
-}
-
-h1:hover {
-  color: lightyellow;
-}
+  line-height: 100px;
+  color: midnightblue;
+ }
 
 body {
   background-image: url(https://images.unsplash.com/photo-1669780080326-c5b82a6476fe?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cmFpbmJvdyUyMGdyYWRpZW50fGVufDB8fDB8fHww);
+  background-size: cover;
+}
+
+div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin: 50% auto;
+  width: 500px;
+  height: 250px;
+  background: white;
+  border-radius: 75px;
+  font-family: 'Comic Sans MS', cursive;
+  font-size: 50px;
+  font-weight: lighter;
+  letter-spacing: 1px;
+  transition: 1s box-shadow;
+}
+
+div:hover {
+  box-shadow: 0 5px 35px 0px rgba(0,0,0,.1);
+}
+
+div:hover::before, div:hover::after {
+  display: block;
+  content: '';
+  position: absolute;
+  width: 500px;
+  height: 250px;
+  background: #FDA8CF;
+  border-radius: 75px;
+  z-index: -1;
+  animation: 1s clockwise infinite;
+}
+
+div:hover:after {
+  background: #F3CE5E;
+  animation: 2s counterclockwise infinite;
+}
+
+@keyframes clockwise {
+  0% {
+    top: -5px;
+    left: 0;
+  }
+  12% {
+    top: -2px;
+    left: 2px;
+  }
+  25% {
+    top: 0;
+    left: 5px;    
+  }
+  37% {
+    top: 2px;
+    left: 2px;
+  }
+  50% {
+    top: 5px;
+    left: 0;    
+  }
+  62% {
+    top: 2px;
+    left: -2px;
+  }
+  75% {
+    top: 0;
+    left: -5px;
+  }
+  87% {
+    top: -2px;
+    left: -2px;
+  }
+  100% {
+    top: -5px;
+    left: 0;    
+  }
+}
+
+@keyframes counterclockwise {
+  0% {
+    top: -5px;
+    right: 0;
+  }
+  12% {
+    top: -2px;
+    right: 2px;
+  }
+  25% {
+    top: 0;
+    right: 5px;    
+  }
+  37% {
+    top: 2px;
+    right: 2px;
+  }
+  50% {
+    top: 5px;
+    right: 0;    
+  }
+  62% {
+    top: 2px;
+    right: -2px;
+  }
+  75% {
+    top: 0;
+    right: -5px;
+  }
+  87% {
+    top: -2px;
+    right: -2px;
+  }
+  100% {
+    top: -5px;
+    right: 0;    
+  }
 }
