--- a/docs/styles.css
+++ b/docs/styles.css
@@ -7,14 +7,18 @@ h1 {
 body {
   background-image: url(https://images.unsplash.com/photo-1669780080326-c5b82a6476fe?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cmFpbmJvdyUyMGdyYWRpZW50fGVufDB8fDB8fHww);
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 div {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 300px;
+  margin-bottom: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
-  margin: 50% auto;
   width: 500px;
   height: 250px;
   background: white;
